@@ -1,5 +1,9 @@
 2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DBrowserEditor.cpp: 
+
+2013-11-20  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* BrowserWindow.cpp:
 	* X3DBrowserEditor.h:
 	* X3DBrowserEditor.cpp:
